objects/Recap__c.object
<CustomObject>
    <description>Used by Digital Solutions for various products to help determine the specifics for a product&apos;s build out.  For example, the Recap provides build, inventory, and domain information for websites.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Recaps</relationshipLabel>
        <relationshipName>Recaps</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Owner2__c</fullName>
        <label>Active Owner</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Owner_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active_Owner_Lookup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recaps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ad_Spend_Budget__c</fullName>
        <label>Ad Spend Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Demo_Site_Notes__c</fullName>
        <inlineHelpText>Use this field for additional URLs and description.</inlineHelpText>
        <label>Additional Demo Site Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Domains__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please attach all relevant information for additional domains in Notes and Attachments.</inlineHelpText>
        <label>Additional Domains (attach)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Domains_if_applicable__c</fullName>
        <label>Additional Domains (if applicable):</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Makes__c</fullName>
        <label>Additional Makes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Account__r.CBLTBillStreet__c &amp; IF(Len(Account__r.CBLTBillStreet__c) = 0, &quot;&quot;, BR()) &amp; 
Account__r.CBLTBillCity__c &amp; 
IF(
  OR(
    Len( Account__r.CBLTBillCity__c ) + Len( Account__r.CBLTBillStreet__c ) = 0, 
    Len( Account__r.CBLTBillState__c ) + Len( Account__r.CBLTBillZip__c ) + Len( Account__r.CBLTBillCountry__c) = 0), 
  &quot;&quot;, 
  &quot;, &quot;
) &amp; 
Account__r.CBLTBillState__c &amp; &quot; &quot; &amp; 
Account__r.CBLTBillZip__c &amp; IF(Len(Account__r.CBLTBillStreet__c) + Len(Account__r.CBLTBillState__c) + Len(Account__r.CBLTBillCity__c) = 0, &quot;&quot;, BR()) &amp; 
Account__r.CBLTBillCountry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternate Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recaps (Alternate Contact)</relationshipLabel>
        <relationshipName>Recaps3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BAC_Dealer_Code__c</fullName>
        <inlineHelpText>Use the BAC listed in Business Sites on the Accounts if it&apos;s a GM website.  Otherwise use Dealer Code.</inlineHelpText>
        <label>BAC/Dealer Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Background__c</fullName>
        <label>Background</label>
        <picklist>
            <controllingField>Design__c</controllingField>
            <picklistValues>
                <fullName>Beach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Sky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capitan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Castles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cayote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Light Streak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foothills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ice Fire Bridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Light Bends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Light Emids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Light Speed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mirage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nature Grassland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nature Ocean 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Night Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oasis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red Rock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sky Falls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sky Rim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Texture Concrete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Bridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tunnel Bend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tunnel Bridge</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Body_Shop_Hours__c</fullName>
        <label>Body Shop</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mazda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitsubishi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nissan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Endorsed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toyota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bridge_Field__c</fullName>
        <description>This field is updated with the id of the record of the source object which is updated or inserted. In turn, this field helps in invoking the trigger on the Recap__c Object.</description>
        <label>Bridge Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cancel_Recap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel Recap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Recaps</relationshipLabel>
        <relationshipName>Recaps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cobalt_Website_Domain__c</fullName>
        <label>Cobalt Website Domain</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <picklist>
            <controllingField>Design__c</controllingField>
            <picklistValues>
                <fullName>Adventure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conquest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cruise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daylight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endeavor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excellence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excursion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expedition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Explore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Find New Roads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Journey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mazda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midnight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migrate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitsubishi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navigate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nissan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Colorold__c</fullName>
        <label>Color-old</label>
        <picklist>
            <controllingField>Designold__c</controllingField>
            <picklistValues>
                <fullName>Beige</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlackPearl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueBeige</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burgundy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charcoal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claret</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deep Cardinal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ebony Slate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fellowship Gray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heritage Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illustrious Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Khaki</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leaf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luminous Gray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Night</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propulsive Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sapphire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sky</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_Notes__c</fullName>
        <label>Content Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Content_Updates__c</fullName>
        <label>Content Updates</label>
        <picklist>
            <picklistValues>
                <fullName>You do not have content to be moved over from your transitioning website.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>You have content to be moved over from your transitioning website.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Critical_Note__c</fullName>
        <label>Critical Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Name_Server2__c</fullName>
        <label>Current Name Server:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Name_Server3__c</fullName>
        <label>Current Name Server:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Name_Server__c</fullName>
        <label>Current Name Server:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Registrar2__c</fullName>
        <label>Current Registrar:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Registrar3__c</fullName>
        <label>Current Registrar:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Registrar__c</fullName>
        <label>Current Registrar:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Website_URL__c</fullName>
        <inlineHelpText>If they do not have a URL yet, please leave blank.</inlineHelpText>
        <label>Current Website URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DMS_Connection_Type__c</fullName>
        <label>DMS Connection Type</label>
        <picklist>
            <picklistValues>
                <fullName>DMS Modem #</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMART DMS IP Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VPN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMS_Connection__c</fullName>
        <label>DMS Connection #</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DMS_Login__c</fullName>
        <label>DMS Login</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DMS_Password__c</fullName>
        <label>DMS Password</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DMS_Vendor_Type__c</fullName>
        <inlineHelpText>Please include the type of DMS in addition to the vendor.  For example: ADP 9400.</inlineHelpText>
        <label>DMS Vendor &amp; Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DSC__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  Account__r.Digital_Sales_Consultant__c ,   Account__r.Digital_Sales_Consultant__r.FirstName &amp; &quot; &quot; &amp;  Account__r.Digital_Sales_Consultant__r.LastName)</formula>
        <label>DSC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSM_Inventory_Type__c</fullName>
        <label>DSM Inventory Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DSM_Nat_Ent__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Account__r.Designated_DSM_Nat_Ent__c,  Account__r.Designated_DSM_Nat_Ent__r.FirstName &amp; &quot; &quot; &amp;  Account__r.Designated_DSM_Nat_Ent__r.LastName)</formula>
        <label>DSM-Nat-Ent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSM__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Account__r.Designated_DSM__c,  Account__r.Designated_DSM__r.FirstName  &amp; &quot; &quot; &amp;  Account__r.Designated_DSM__r.LastName)</formula>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>DSM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Sent_to_IFS__c</fullName>
        <inlineHelpText>This should be filled out by the SOS when the order is sent over.</inlineHelpText>
        <label>Date Sent to IFS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Group_Affiliation__c</fullName>
        <formula>Account__r.Dealer_Group_Name2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Group Affiliation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_Brand_Names__c</fullName>
        <label>Dealership Brand Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Branding__c</fullName>
        <label>Dealership Branding</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Competitors__c</fullName>
        <label>Dealership Competitors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Email__c</fullName>
        <label>Dealership Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealership_Logo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the Dealership Logo box is checked, either attach assets to this record or email with the order to the SOS queue.</inlineHelpText>
        <label>Dealership Logo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealership_Tagline_Slogan__c</fullName>
        <inlineHelpText>Cannot include &quot;Best&quot; or &quot;#1&quot; (Per Google)</inlineHelpText>
        <label>Dealership Tagline/Slogan</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_Site_1_Notes__c</fullName>
        <inlineHelpText>Tell us what your client likes about this website - what they would like carried over to their own site.</inlineHelpText>
        <label>Demo Site 1 Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Demo_Site_1__c</fullName>
        <inlineHelpText>URL</inlineHelpText>
        <label>Demo Site 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Demo_Site_2_Notes__c</fullName>
        <inlineHelpText>Tell us what your client likes about this website and would like to see on their own website.</inlineHelpText>
        <label>Demo Site 2 Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Demo_Site_2__c</fullName>
        <inlineHelpText>URL</inlineHelpText>
        <label>Demo Site 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Description_Promo__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design__c</fullName>
        <label>Design</label>
        <picklist>
            <controllingField>Brand__c</controllingField>
            <picklistValues>
                <fullName>Altair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW Endorsed 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick GMC Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capella</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capella - Holden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glacier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Canada Accelera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Canada Edge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Canada Endorsed 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Canada Endorsed 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Canada Panorama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holden Capella</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holden Uluru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai Endorsed 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai Endorsed 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai Flex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia Endorsed 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia Endorsed 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia Endorsed 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus Endorsed 11 V 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus Endorsed 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus Endorsed 5 V 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus Endorsed 6 V 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus Endorsed 8 V 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus Endorsed 9 V 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI Endorsed 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Designold__c</fullName>
        <label>Design-old</label>
        <picklist>
            <picklistValues>
                <fullName>Altair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW Endorsed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick GMC Endorsed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac Exclusive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet Exclusive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet Showroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai Endorsed 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai Endorsed 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia Endorsed 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia Endorsed 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia Endorsed 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus Design 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus Design 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus Design 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus Design 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus Design 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus Design 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI Endorsed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procyon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rigel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scion 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scion 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VW UniversalNav</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nissan Corporate Compliant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nissan Shift</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disclaimer_Promo__c</fullName>
        <label>Disclaimer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_Ring_To__c</fullName>
        <inlineHelpText>Ring To Number for Display</inlineHelpText>
        <label>Display Ring To</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display__c</fullName>
        <label>Display</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Domain_1_Authorization_Code__c</fullName>
        <inlineHelpText>Either a Username and Password OR an Authorization Code will be required if the dealership is transfering an existing domain.</inlineHelpText>
        <label>Domain 1 Authorization Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_1_Email_Boxes__c</fullName>
        <inlineHelpText>Please make sure to expand this list - only the first 7 lines will display.</inlineHelpText>
        <label>Domain 1 Email Boxes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Domain_1_MX_Record__c</fullName>
        <inlineHelpText>Required if the dealership is repointing a DNS domain.</inlineHelpText>
        <label>Domain 1 MX Record</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Domain_1_Password__c</fullName>
        <label>Domain 1 Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_1_Transfer_Email__c</fullName>
        <label>Domain 1 Transfer Email?</label>
        <picklist>
            <controllingField>Domain_1_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Domain_1_Type__c</fullName>
        <label>Domain 1 Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Owned - DNS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Owned - IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Domain_1_URL__c</fullName>
        <label>Domain 1 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Domain_1_Username__c</fullName>
        <inlineHelpText>Either a Username and Password OR an Authorization Code will be required if the dealership is transfering an existing domain.</inlineHelpText>
        <label>Domain 1 Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>